kubernetes/media/nzbget/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
  labels:
    app: nzbget
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      containers:
      - name: nzbget
        image: linuxserver/nzbget
        ports:
        - containerPort: 6789
        volumeMounts:
        - name: nzbget-config
          mountPath: /config
        - name: tz-config
          mountPath: /etc/localtime

      volumes:
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Europe/Berlin
          type: File
      - name: nzbget-config
        persistentVolumeClaim:
          claimName: nzbget-config
