kubernetes/media/nzbget/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
  labels:
    app: nzbget
spec:
  ports:
    - name: http
      port: 80
      targetPort: 6789
  selector:
    app: nzbget
