kubernetes/media/nzbget/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nzbget
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`nzbget.kurz.site`)
    kind: Rule
    services:
    - name: nzbget
      port: 80
    middlewares:
      - name: traefik-forward-auth
        namespace: traefik
  tls:
    certResolver: letsencrypt
